Fixed invisible labels

--- a/sites/default/themes/dkan/sass-custom/_dkan.scss
+++ b/sites/default/themes/dkan/sass-custom/_dkan.scss
@@ -1867,7 +1867,7 @@ div.horizontal-tabs .form-text {
       }
     }
     label {
-      display: none;
+      /* display: none;  */
     }
  
   }
